changing background color

--- a/public/app.css
+++ b/public/app.css
@@ -1,5 +1,5 @@
 html {
-	background: linear-gradient(#0C8D86, #B721EC) fixed;
+	background: linear-gradient(#dc9de4, #B721EC) fixed;
 	background-repeat: repeat;
 	height: 100vh;
 	/* font-size: 1em; */
