--- a/public/app.css
+++ b/public/app.css
@@ -18,7 +18,7 @@ html {
 }
 
 ::-webkit-scrollbar-thumb {
-    background: linear-gradient(to top right, #41b782, #86d169);
+    background: linear-gradient(to top right, #dc9de4, #B721EC);
     border: 0px solid transparent;
     border-radius: 50px;
 }
