adding basic structure to the Create Campaign Page

--- a/public/app.css
+++ b/public/app.css
@@ -1,5 +1,5 @@
 html {
-	background: linear-gradient(#dc9de4, #B721EC) fixed;
+	background: linear-gradient(#dd0df0, #e312ff) fixed;
 	background-repeat: repeat;
 	height: 100%;
 	/* font-size: 1em; */
